--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "logrocket": "^8.1.0",
     "mongoose": "^8.2.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.13"
